--- a/home.html
+++ b/home.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAIN</title>
-    <link rel="stylesheet" href="/홈페이지제작/css/font.css">
-    <link rel="stylesheet" href="/홈페이지제작/css/main.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="home">
