--- a/html/shop.html
+++ b/html/shop.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
-    <link rel="stylesheet" href="/홈페이지제작/css/font.css">
-    <link rel="stylesheet" href="/홈페이지제작/css/shop.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/shop.css">
 </head>
 <body>
     <div class="header">
@@ -53,21 +53,21 @@
                 <ul class="imgshop">
                     <li>
                         <div class="img">
-                            <img class="one" src="/홈페이지제작/image/shop1.PNG">
+                            <img class="one" src="image/shop1.PNG">
                         </div>
                         <div class="text">Sling back(Deep sleep)</div>
                         <div class="text">179,000원</div>
                     </li>
                     <li>
                         <div class="img">
-                            <img src="/홈페이지제작/image/shop2.PNG" class="one">
+                            <img src="image/shop2.PNG" class="one">
                         </div>
                         <div class="text">Sling back(My clean bed)</div>
                         <div class="text">179,000원</div>
                     </li>
                     <li>
                         <div class="img">
-                            <img src="/홈페이지제작/image/shop3.PNG" class="one">
+                            <img src="image/shop3.PNG" class="one">
                         </div>
                         <div class="text">Sling back(Glow salmon pink)</div>
                         <div class="text">179,000원</div>
@@ -76,21 +76,21 @@
                 <ul class="imgshop">
                     <li>
                         <div class="img">
-                            <img src="/홈페이지제작/image/shop4.PNG" class="one">
+                            <img src="image/shop4.PNG" class="one">
                         </div>
                         <div class="text">epke v-flat(Bubble bath)</div>
                         <div class="text">169,000원</div>
                     </li>
                     <li>
                         <div class="img">
-                            <img src="/홈페이지제작/image/shop5.PNG" class="one">
+                            <img src="image/shop5.PNG" class="one">
                         </div>
                         <div class="text">epke flat(Glow jade)</div>
                         <div class="text">169,000원</div>
                     </li>
                     <li>
                         <div class="img">
-                            <img src="/홈페이지제작/image/shop6.PNG" class="one">
+                            <img src="image/shop6.PNG" class="one">
                         </div>
                         <div class="text">epke v-flat(Melting butter)</div>
                         <div class="text">169,000원</div>
